# edgelink

./: Cargo.toml  README.md  README.zh-cn.md  build.rs  edgelinkd.dev.toml  pytest.ini
.cargo/: config.toml
.github/workflows/: CICD.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/runtime/: engine.rs  env.rs  eval.rs  flow.rs  group.rs  mod.rs  registry.rs  subflow.rs
crates/core/src/runtime/context/: memory.rs  mod.rs
crates/core/src/runtime/js/: mod.rs  util.rs
crates/core/src/runtime/model/: eid.rs  mod.rs  msg.rs  propex.rs
crates/core/src/runtime/model/json/: deser.rs  mod.rs  npdeser.rs
crates/core/src/runtime/model/variant/: array.rs  converts.rs  js_support.rs  map.rs  mod.rs  ser.rs
crates/core/src/runtime/nodes/: mod.rs
crates/core/src/runtime/nodes/common_nodes/: catch.rs  complete.rs  console_json.rs  debug.rs  inject.rs  junction.rs  link_call.rs  link_in.rs  link_out.rs  mod.rs  status.rs  subflow.rs  test_once.rs  unknown.rs
crates/core/src/runtime/nodes/function_nodes/: change.rs  range.rs  rbe.rs
crates/core/src/runtime/nodes/function_nodes/function/: context_class.rs  edgelink_class.rs  env_class.rs  function.prelude.js  mod.rs  node_class.rs
crates/core/src/runtime/nodes/network_nodes/: udp_out.rs
crates/core/src/runtime/nodes/storage_nodes/: file.rs  mod.rs
crates/core/src/text/: json.rs
crates/core/src/utils/: async_util.rs  constants.rs  graph.rs  handle.rs  mod.rs  topo.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/pymod/: Cargo.toml
crates/pymod/src/: json.rs  lib.rs
node-plugins/edgelink-dummy-node/: Cargo.toml
node-plugins/edgelink-dummy-node/src/: lib.rs
node-plugins/edgelink-nodes-dummy/: Cargo.toml
node-plugins/edgelink-nodes-dummy/src/: lib.rs
scripts/: cross-unittest.py  gen-red-node-specs.sh  load-pymod-test.py  specs_diff.json  specs_diff.py
src/: cliargs.rs  main.rs
tests/: REDNODES-SPECS-DIFF.md  __init__.py  conftest.py  requirements.txt
tests/home/: edgelinkd.toml
tests/nodes/: test_subflow.py
tests/nodes/common/: test_catch_node.py  test_inject_node.py  test_junction_node.py  test_link_nodes.py
tests/nodes/function/: test_change_node.py  test_function_node.py  test_range_node.py  test_rbe_node.py
