[package]
name = "edgelink-app"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
readme = "README.md"
homepage = "https://github.com/oldrev/edgelink.rs"
description = "EdgeLink is a Node-RED compatible run-time engine in Rust."
build = "build.rs"
license = "Apache 2.0"
authors = ["Li Wei <oldrev@gmail.com>"]


[[bin]]
name = "edgelinkd"
path = "src/main.rs"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

[profile.ci]
inherits = "dev"
debug = false
incremental = false

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
strip = true      # Automatically strip symbols from the binary.

[profile.test]
opt-level = 1 # Enables thin local LTO and some optimizations.

[workspace.dependencies]
bincode = "1.3.3"
async-trait = "0.1.81"
anyhow = { version = "1.0.86", features = ["backtrace"] }
log = "0.4.20"
tokio = "1.40.0"
tokio-util = "0.7.11"
semver = "1.0.23"
config = { version = "0.14.0", default-features = false, features = [
    "convert-case",
    "toml",
] }
serde = { version = "1.0.209" }
serde_json = "1.0.127"
serde_json_path = "0.6.3"
dashmap = { version = "6.1.0", features = ["serde"] }
rand = "0.8.5"
base64 = "0.22.1"
bytes = { version = "1.7.1", features = ["std", "serde"] }
chrono = "0.4.38"
regex = "1.10.2"
thiserror = "1.0.63"
nom = "7.1.3"
tokio-cron-scheduler = "0.11.0"
topological-sort = "0.2.2"
bumpalo = "3.16.0"
rquickjs = { version = "0.6.2", features = ["full-async", "parallel"] }
dirs-next = "2.0.0"
clap = { version = "4.5.16", features = ["derive"] }
itertools = "0.13.0"
arrayvec = "0.7.6"
smallvec = "1.13.2"
smallstr = { version = "0.3.0", features = ["serde", "std", "union"] }
inventory = "0.3.15"

[dependencies]
clap.workspace = true
dirs-next.workspace = true
anyhow.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["signal"] }
tokio-util.workspace = true
config.workspace = true
semver.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
log4rs = { version = "1.3.0", features = [
    "console_appender",
    "file_appender",
    "rolling_file_appender",
    "compound_policy",
    "delete_roller",
    "fixed_window_roller",
    "size_trigger",
    "time_trigger",
    #    "json_encoder",
    "pattern_encoder",
    "threshold_filter",
    "config_parsing",
    "toml_format",
], default-features = false }

edgelink-core = { path = "crates/core", default-features = false }

# Node plug-ins:
edgelink-dummy-node = { path = "node-plugins/edgelink-dummy-node" }


[dev-dependencies]
serde_json_path.workspace = true

[workspace]
members = ["crates/*", "node-plugins/*"]

[package.metadata.bundle]
identifier = "com.github.oldrev.edgelink"

[features]
full = ["default", "rqjs_bindgen"]
default = ["core", "js"]
core = ["edgelink-core/core"]
js = ["edgelink-core/js"]
rqjs_bindgen = ["js", "edgelink-core/rqjs_bindgen"]
