[package]
name = "edgelink-dummy-node"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
tokio-util.workspace = true
log.workspace = true
inventory.workspace = true
edgelink-core = { path = "../../crates/core", default-features = false, features = [
    "core",
] }
edgelink-macro = { path = "../../crates/macro" }
